--- a/ProjectLivingRooom/ProjectLivingRooom.vcxproj.filters
+++ b/ProjectLivingRooom/ProjectLivingRooom.vcxproj.filters
@@ -27,12 +27,18 @@
     <ClCompile Include="lamp.cpp">
       <Filter>Objects</Filter>
     </ClCompile>
+    <ClCompile Include="photo_frame.cpp">
+      <Filter>Objects</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="table.h">
       <Filter>Objects</Filter>
     </ClInclude>
     <ClInclude Include="lamp.h">
+      <Filter>Objects</Filter>
+    </ClInclude>
+    <ClInclude Include="photo_frame.h">
       <Filter>Objects</Filter>
     </ClInclude>
   </ItemGroup>
