--- a/ProjectLivingRooom/ProjectLivingRooom.vcxproj
+++ b/ProjectLivingRooom/ProjectLivingRooom.vcxproj
@@ -90,7 +90,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\vendor\glew\include;$(SolutionDir)\vendor\freeglut\include;$(SolutionDir)\vendor\SOIL2\include;$(SolutionDir)\vendor\dirent\include;$(SolutionDir)\vendor\GL_files\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)\vendor\additional\Library\include;$(SolutionDir)\vendor\glew\include;$(SolutionDir)\vendor\freeglut\include;$(SolutionDir)\vendor\SOIL2\include;$(SolutionDir)\vendor\dirent\include;$(SolutionDir)\vendor\GL_files\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
