--- a/ProjectLivingRooom/ProjectLivingRooom.vcxproj
+++ b/ProjectLivingRooom/ProjectLivingRooom.vcxproj
@@ -90,12 +90,12 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)\vendor\additional\Library\include;$(SolutionDir)\vendor\glew\include;$(SolutionDir)\vendor\freeglut\include;$(SolutionDir)\vendor\SOIL2\include;$(SolutionDir)\vendor\dirent\include;$(SolutionDir)\vendor\GL_files\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)vendor\additional\Library\include;$(SolutionDir)vendor\glew\include;$(SolutionDir)vendor\freeglut\include;$(SolutionDir)vendor\SOIL2\include;$(SolutionDir)vendor\dirent\include;$(SolutionDir)vendor\GL_files\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)\vendor\glew\lib\Release\Win32;$(SolutionDir)\vendor\freeglut\lib;$(SolutionDir)\vendor\SOIL2\lib;$(SolutionDir)\vendor\GL_files\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(SolutionDir)vendor\glew\lib;$(SolutionDir)vendor\freeglut\lib;$(SolutionDir)vendor\SOIL2\lib;$(SolutionDir)vendor\GL_files\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>glu32.lib;glut32.lib;soil2-debug.lib;soil2.lib;freeglut.lib;glew32.lib;glew32s.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
